; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_ipc.c_linux_shmdt.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_ipc.c_linux_shmdt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.linux_shmdt_args = type { i32 }
%struct.shmdt_args = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_shmdt(%struct.thread* %0, %struct.linux_shmdt_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.linux_shmdt_args*, align 8
  %5 = alloca %struct.shmdt_args, align 4
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.linux_shmdt_args* %1, %struct.linux_shmdt_args** %4, align 8
  %6 = load %struct.linux_shmdt_args*, %struct.linux_shmdt_args** %4, align 8
  %7 = getelementptr inbounds %struct.linux_shmdt_args, %struct.linux_shmdt_args* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @PTRIN(i32 %8)
  %10 = getelementptr inbounds %struct.shmdt_args, %struct.shmdt_args* %5, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load %struct.thread*, %struct.thread** %3, align 8
  %12 = call i32 @sys_shmdt(%struct.thread* %11, %struct.shmdt_args* %5)
  ret i32 %12
}

declare dso_local i32 @PTRIN(i32) #1

declare dso_local i32 @sys_shmdt(%struct.thread*, %struct.shmdt_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
